test/corpus/binary.txt
================
Add
================

0x22 + 0o43;

---

(source_file
 (add
  (integer_literal)
  (integer_literal)))

================
Subtract
================

0o127 - 0o22;

---

(source_file
 (subtract
  (integer_literal)
  (integer_literal)))

================
Add Subtract ((1+1)-1)
================

34 + 55 - 47;

---

(source_file
 (subtract
  (add
   (integer_literal)
   (integer_literal))
  (integer_literal)))

================
Subtract Add ((1-1)+1)
================

34 - 12 + 47;

---

(source_file
 (add
  (subtract
   (integer_literal)
   (integer_literal))
  (integer_literal)))

================
Multiply
================

105 * 4;

---

(source_file
 (multiply
  (integer_literal)
  (integer_literal)))

================
Multiply Multiply
================

105 * 2 * 2;

---

(source_file
 (multiply
  (multiply
   (integer_literal)
   (integer_literal))
  (integer_literal)))

================
Multiply Add (1*1)+1
================

17 * 4 + 1;

---

(source_file
 (add
  (multiply
   (integer_literal)
   (integer_literal))
  (integer_literal)))

================
Add Multiply 1+(1*1)
================

1 + 17 * 4;

---

(source_file
 (add
  (integer_literal)
  (multiply
   (integer_literal)
   (integer_literal))))

================
Add Multiply, Parentheses Force Precedence
================

(1 + 17) * 4;

---

(source_file
 (multiply
  (paren
   (add
    (integer_literal)
    (integer_literal)))
  (integer_literal)))

================
Divide
================

1680 / 4;

---

(source_file
 (divide
  (integer_literal)
  (integer_literal)))

================
Divide Divide
================

1680 / 2 / 2;

---

(source_file
 (divide
  (divide
   (integer_literal)
   (integer_literal))
  (integer_literal)))

================
Divide Multiply
================

1680 / 8 * 2;

---

(source_file
 (multiply
  (divide
   (integer_literal)
   (integer_literal))
  (integer_literal)))

================
Multiply Divide
================

105 * 8 / 2;

---

(source_file
 (divide
  (multiply
   (integer_literal)
   (integer_literal))
  (integer_literal)))

================
Divide Add (1/1)+1
================

272 / 4 + 1;

---

(source_file
 (add
  (divide
   (integer_literal)
   (integer_literal))
  (integer_literal)))

================
Add Divide 1+(1/1)
================

1 + 272 / 4;

---

(source_file
 (add
  (integer_literal)
  (divide
   (integer_literal)
   (integer_literal))))


================
Remainder
================

1680 % 4;

---

(source_file
 (remainder
  (integer_literal)
  (integer_literal)))

================
Remainder Remainder
================

1680 % 2 % 2;

---

(source_file
 (remainder
  (remainder
   (integer_literal)
   (integer_literal))
  (integer_literal)))

================
Remainder Multiply
================

1680 % 8 * 2;

---

(source_file
 (multiply
  (remainder
   (integer_literal)
   (integer_literal))
  (integer_literal)))

================
Multiply Remainder
================

105 * 8 % 2;

---

(source_file
 (remainder
  (multiply
   (integer_literal)
   (integer_literal))
  (integer_literal)))

================
Remainder Add (1%1)+1
================

272 % 4 + 1;

---

(source_file
 (add
  (remainder
   (integer_literal)
   (integer_literal))
  (integer_literal)))

================
Add Remainder 1+(1%1)
================

1 + 272 % 4;

---

(source_file
 (add
  (integer_literal)
  (remainder
   (integer_literal)
   (integer_literal))))

================
Add, Member Access + Member Access
================

foo.x + bar.x;

---

(source_file
 (add
  (member_access
   (identifier) (identifier))
  (member_access
   (identifier) (identifier))))

================
Equal
================

69 = 420;

---

(source_file
 (eq
  (integer_literal)
  (integer_literal)))

================
Equal Add
================

17 + 51 = 69;

---

(source_file
 (eq
  (add
   (integer_literal)
   (integer_literal))
  (integer_literal)))

================
Equal Add Add
================

17 + 51 = 51 + 17;

---

(source_file
 (eq
  (add
   (integer_literal)
   (integer_literal))
  (add
   (integer_literal)
   (integer_literal))))

================
Not Equal
================

69 != 420;

---

(source_file
 (ne
  (integer_literal)
  (integer_literal)))

================
Greater Than
================

69 > 420;

---

(source_file
 (gt
  (integer_literal)
  (integer_literal)))

================
Greater Than or Equal
================

69 >= 420;

---

(source_file
 (ge
  (integer_literal)
  (integer_literal)))

================
Less Than
================

69 < 420;

---

(source_file
 (lt
  (integer_literal)
  (integer_literal)))

================
Less Than or Equal
================

69 <= 420;

---

(source_file
 (le
  (integer_literal)
  (integer_literal)))


================
And
================

69 and 420;

---

(source_file
 (and
  (integer_literal)
  (integer_literal)))

================
Or
================

69 or 420;

---

(source_file
 (or
  (integer_literal)
  (integer_literal)))

================
And Or
================

69 and 420 or 710;

---

(source_file
 (or
  (and
   (integer_literal)
   (integer_literal))
  (integer_literal)))

================
Or And
================

69 or 420 and 710;

---

(source_file
 (or
  (integer_literal)
  (and
   (integer_literal)
   (integer_literal))))

================
Or
================

69 or 420;

---

(source_file
 (or
  (integer_literal)
  (integer_literal)))


================
Bitwise Conjunction
================

341 & 69;

---

(source_file
 (bitand
  (integer_literal)
  (integer_literal)))

================
Bitwise Disjunction
================

1 | 68;

---

(source_file
 (bitor
  (integer_literal)
  (integer_literal)))

================
Bitwise Exclusive Conjunction
================

338 ^ 279;

---

(source_file
 (bitxor
  (integer_literal)
  (integer_literal)))

================
Bitwise Shift Left
================

105 << 2;

---

(source_file
 (bitshl
  (integer_literal)
  (integer_literal)))

================
Bitwise Shift Right
================

1680 >> 2;

---

(source_file
 (bitshr
  (integer_literal)
  (integer_literal)))


================
Add Declaration, Declaration
================

(x :: 34) + (y :: 35);

---

(source_file
 (add
  (paren
   (declaration
    (identifier)
    (integer_literal)))
  (paren
   (declaration
    (identifier)
    (integer_literal)))))
