test/corpus/if.txt
=================
If, Empty Block
:error
================

if false {};

---

================
If, Empty Block, Soft Separator
================

if false, {};

---

(source_file
 (if (bool_literal)
   (block)))

================
If, Empty Block, Hard Separator
:error
:desc No hard separator between condition and then body.
================

if false; {};

---

================
If/Else, Empty Blocks, No Separators
:error
================

if false {} else {};

---

================
If/Else, Empty Blocks, Soft Separator Between condition/then
================

if false, {} else {};

---

(source_file
 (if (bool_literal)
   (block)
   (block)))

================
If/Else, Empty Blocks, Hard Separator Between condition/then
:error
:desc No hard separator between condition and then body.
================

if false; {} else {};

---

================
If/Else, Empty Blocks, Soft Separator Between then/`else'
================

if false {}, else {};

---

(source_file
 (if (call (bool_literal) (block))
   (call (identifier) (block))))

================
If/Else, Empty Blocks, Hard Separator Between then/`else'
:error
================

if false {}; else {};

---

================
If/Else, Empty Blocks, Soft Separator Between condition/then, Hard Separator Between then/`else'
================

if false, {}; else {};

---

(source_file
 (if (bool_literal)
   (block)
   (block)))

================
If/Else, Empty Blocks, Soft Separators
================

if false, {}, else {};

---

(source_file
 (if (bool_literal)
   (block)
   (block)))

================
If/Else, Empty Blocks, Hard Separators
:error
:desc No hard separator between condition and then body.
================

if false; {}; else {};

================
If/Else, Empty Blocks, Soft+Hard Separator
================

if false, {}; else {};

---

(source_file
 (if (bool_literal)
   (block)
   (block)))

================
If/Else, Empty Blocks, Hard+Soft Separator
:error
:desc No hard separator between condition and then body.
================

if false; {}, else {};

---

(source_file
 (if (bool_literal)
   (block)
   (block)))
