test/corpus/types_enum.txt
================
Enum, empty
================

enum {};

---

(source_file
 (type_enum
  (block)))

================
Enum, Explicit Underlying
================

enum(int) {};

---

(source_file
 (type_enum
  underlying: (type_primitive)
  (block)))

================
Enum, Single Member (type inferred)
================

enum { x :: 0 };

---

(source_file
 (type_enum
  (block
   (declaration
    (identifier)
    (integer_literal)))))
