test/corpus/types_sum.txt
================
Sum, empty
================

sum {};

---

(source_file
 (type_sum
  (block)))

================
Sum, Single Member (type inferred)
================

sum { x :: 0 };

---

(source_file
 (type_sum
  (block
   (declaration
    (identifier)
    (integer_literal)))))
