test/corpus/while.txt
================
While, Empty Block
================

while false {};

---

(source_file
 (while (bool_literal)
  (block)))

================
While, Empty Block, Soft Separator
================

while false, {};

---

(source_file
 (while (bool_literal)
  (block)))

================
While, Empty Block, Hard Separator
================

while false; {};

---

(source_file
 (while (bool_literal)
  (block)))
